--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Yanzhao Lai"
 title_separator          : "-"
 name                     : &name "Yanzhao Lai"
 description              : &description "personal description"
-url                      : https://avariace.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://laiyz.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "avariace/avariace.github.io"
+repository               : "laiyz/laiyz.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : true # true, false (default)
 words_per_minute         : 160
